tweede uurtje maandag :)

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -47,7 +47,7 @@ The decomposition in Table \ref{tbl:case-decomposed} forms the basis to derive t
 
 \section{Deriving syncretism}\label{sec:syncretism}
 
-In sum, case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}. Along this scale, only contiguous regions in the sequence are syncretic. In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows the possible and impossible syncretism patterns in Table \ref{tbl:syncretisms-derive}.
+Case syncretism follows the ordering of the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}. Along this scale, only contiguous regions in the sequence are syncretic. In this section I show how case syncretism patterns can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows the possible and impossible syncretism patterns in Table \ref{tbl:syncretisms-derive}.
 
 \begin{table}[ht]
   \center
@@ -56,11 +56,11 @@ In sum, case syncretism follows the ordering of the case scale in headless relat
   \label{tbl:syncretisms-derive}
 \end{table}
 
-The intuition is the following. Syncretic forms are realized by a single lexical entry from the lexicon. A lexical entry can be applied if it contains all features, as long as there is no more specific one. So, a lexical entry specified for [\tsc{f1}, \tsc{f2}, \tsc{f3}] can also apply to [\tsc{f1}], if there is no other lexical entry. Now, if there is an entry specific for only [\tsc{f1}, \tsc{f2}], blabla
+The syncretism facts follow in a system in which the case is decomposed as in Table \ref{tbl:case-decomposed} and in which lexicalization that relies on containment. That means that a phonological form is not only inserted if a particular feature specification matches, but also when the features form a subset of the particular feature set.
 
-GO THROUGH ALL THE POSSIBILITIES, WITH SETS OF FEATURES
+The intuition is the following. Syncretic forms are realized by a single lexical entry from the lexicon. A lexical entry can be applied if it contains all features, as long as there is no more specific one. So, a lexical entry specified for [\tsc{f1}, \tsc{f2}, \tsc{f3}] can also apply to [\tsc{f1}], if there is no other lexical entry. Now, if there is an entry specific for only [\tsc{f1}, \tsc{f2}].
 
-
+GO TRHOUGH ALL POSSIBLITES?
 
 % If different cases in a paradigm are syncretic, they can be stored as a single form in the lexicon. That is, Dutch only has a single form in its lexicon for \tit{jullie}. This form is carries \tsc{f1}, \tsc{f2} and \tsc{f3} (see Table \ref{tbl:case-decomposed}). In the framework I will be using (Nanosyntax), lexical items apply to feature sets based on containment. \tsc{f1} and \tsc{f2} are contained in the set of \tsc{f1}, \tsc{f2} and \tsc{f3}.
 
@@ -118,15 +118,14 @@ This structure leads to the concept of phrasal spellout: not terminals but multi
 
 Let me illustrate all of the above with the Faroese pronouns from Table \ref{tbl:syncretisms-derive}. I simplify the situation in two respects. First, I do not show the internal complexity of the pronouns, including person and number features. Instead, I give a triangle, indicating that this is a complex syntactic structure. I refer to is as the person-number phase it refers to, so e.g. \tsc{3sg}P. Second, in this simplified representation I consider the Faroese pronouns to be monomorphemic. I ignore the fact that all three pronouns clearly have the stem \tit{t} with a suffix on it.
 
-The lexical entry for \tit{tú} is given in \ref{ex:faroese-tu-lexicon}. The syntactic representation consists of the complex syntactic structure that corresponds to the third person singular pronoun (the \tsc{3sg}P), and \tsc{f}1, making it a \tsc{nom}P. The phonological representation that is linked to the syntactic representation in \tit{tú}.\footnote{
-Throughout the dissertation, I use syntactic structures and phonological forms connected by a double arrow (⇔) to refer to a lexical entry.
-}
+The lexical entry for \tit{tú} is given in \ref{ex:faroese-tu-lexicon}. The syntactic representation consists of the complex syntactic structure that corresponds to the third person singular pronoun (the \tsc{3sg}P), and \tsc{f}1, making it a \tsc{nom}P. The phonological representation that is linked to the syntactic representation in \tit{tú}. Throughout the dissertation, I use syntactic structures and phonological forms connected by a double arrow (⇔) to refer to a lexical entry.
+
 
 \ex.
 \begin{forest} boom
   [ [\ac{nom}P
       [\ac{f}1]
-      [3\tsc{sg}P
+      [2\tsc{sg}P
           [\phantom{xxx}, roof]
       ]
   ]
@@ -142,7 +141,7 @@ The lexical entry for \tit{teg} is given in \ref{ex:faroese-teg-lexicon}. The sy
       [\ac{f}2]
       [\ac{nom}P
           [\ac{f}1]
-          [3\ac{sg}P
+          [2\ac{sg}P
               [\phantom{xxx}, roof]
           ]
       ]
@@ -161,7 +160,7 @@ The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The 
           [\ac{f}2]
           [\ac{nom}P
               [\ac{f}1]
-              [3\ac{sg}P
+              [2\ac{sg}P
                   [\phantom{xxx}, roof]
               ]
           ]
@@ -173,9 +172,7 @@ The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The 
 
 This brings me to the part of the discussion about matching. The syntactic structures and their phonological counterparts I gave in \ref{ex:faroese-tu-lexicon} to \ref{ex:faroese-taer-lexicon} are lexical entries. These are matched against the actual syntactic structure that is to be realized.
 Examples of syntactic structures are given in \ref{ex:faroese-tu-spellout} to \ref{ex:faroese-taer-spellout}.
-The syntactic structure in \ref{ex:faroese-tu-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-tu-lexicon}. Therefore, this syntactic structure is spelled out as \tit{tu}.\footnote{
-Throughout this dissertation I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
-}
+The syntactic structure in \ref{ex:faroese-tu-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-tu-lexicon}. Therefore, this syntactic structure is spelled out as \tit{tu}. Throughout this dissertation I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
 
 \ex. \begin{forest} boom
 [\tsc{nomP},
@@ -186,7 +183,7 @@ scale=0.8,
 fit to=tree]{};
 }
     [\ac{f}1]
-    [\tsc{3sg}P
+    [\tsc{2sg}P
         [\phantom{xxx}, roof]
     ]
 ]
@@ -206,7 +203,7 @@ fit to=tree]{};
     [\tsc{f2}]
     [\tsc{nom}P
         [\ac{f}1]
-        [3\tsc{sg}P
+        [2\tsc{sg}P
             [\phantom{xxx}, roof]
         ]
     ]
@@ -229,7 +226,7 @@ fit to=tree]{};
         [\tsc{f2}]
         [\tsc{nom}P
             [\tsc{f1}]
-            [3\tsc{sg}P
+            [2\tsc{sg}P
                 [\phantom{xxx}, roof]
             ]
         ]
@@ -482,7 +479,7 @@ fit to=tree]{};
         [\tsc{f2}]
         [\tsc{nom}P
             [\tsc{f1}]
-            [3\tsc{sg}P
+            [1\tsc{pl}P
                 [\phantom{xxx}, roof]
             ]
         ]
@@ -505,7 +502,7 @@ fit to=tree]{};
     [\tsc{f2}]
     [\tsc{nom}P
         [\tsc{f1}]
-        [3\tsc{sg}P
+        [1\tsc{pl}P
             [\phantom{xxx}, roof]
         ]
     ]
@@ -526,7 +523,7 @@ scale=0.8,
 fit to=tree]{};
 }
     [\tsc{f1}]
-    [3\tsc{sg}P
+    [1\tsc{pl}P
         [\phantom{xxx}, roof]
     ]
 ]
@@ -646,9 +643,7 @@ To summarize, xxxx
 
 \section{Deriving case containment}
 
-Start with the observation in terms of the case scale: \ac{nom} < \ac{acc} < \ac{dat}
-
-In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example that shows morphological case containment in Table \ref{tbl:cont-khanty} \pgcitep{nikolaeva1999}{16}.
+In for instance Khanty, the phonological form of the accusative literally contains the phonological form of the nominative. In turn, the form of the dative contains the form of the accusative. In this section I show how morphological case containment can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat an example from Khanty that shows morphological case containment in Table \ref{tbl:cont-khanty} \pgcitep{nikolaeva1999}{16}.
 
 \begin{table}[ht]
   \center
@@ -659,7 +654,7 @@ In this section I show how morphological case containment can be derived from th
 
 The intuition is the following. The morphological form of the pronouns mirror the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{-e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{luw-e:l}-na). In what follows I make it concrete how syntactic features translate to morphological form.
 
-First, I give the lexical entry for the nominative third person singular. It contains pronominal syntactic structure and the feature \tsc{f}1. The lexical entry is given in \ref{ex:khanty-luw-lexicon}.
+First, I give the lexical entry for the nominative third person singular. It contains pronominal syntactic structure and the feature \tsc{f}1. The phonological form associated with the structure is \tit{luw}. The lexical entry is given in \ref{ex:khanty-luw-lexicon}.
 
 \ex.
 \begin{forest} boom
@@ -672,7 +667,7 @@ First, I give the lexical entry for the nominative third person singular. It con
   {\draw (.east) node[right]{⇔ \tit{luw}}; }
 \end{forest}\label{ex:khanty-luw-lexicon}
 
-The syntactic structure in \ref{ex:khanty-luw-spellout} is contained in the syntactic structure of the lexical entry \ref{ex:khanty-luw-spellout}. The nominative is spelled out as \tit{luw}.
+The syntactic structure in for the nominative is given in \ref{ex:khanty-luw-spellout}. It is contained in the syntactic structure of the lexical entry in \ref{ex:khanty-luw-spellout}, and the nominative is spelled out as \tit{luw}.
 
 \ex. \begin{forest} boom
 [\tsc{nomP},
@@ -689,7 +684,7 @@ fit to=tree]{};
 ]
 \end{forest}\label{ex:khanty-luw-spellout}
 
-In the previous section I only gave examples in which the forms were syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). All features were always spelled out by a single lexical entry. The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modeled by letting the \tsc{nom}P contained in the \tsc{acc}P be realized by the same \tsc{nom}P that is spelled out in the nominative. \tsc{f2} has their own realization that builds upon the nominative (and so does \tsc{f3} on top of the accusative).\footnote{
+In the previous section I only gave examples in which the forms were syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). All (pronoiminal and case) features were spelled out by a single lexical entry. The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modeled by letting the \tsc{nom}P contained in the \tsc{acc}P be realized by the same \tsc{nom}P that is spelled out in the nominative. \tsc{f2} has their own realization that builds upon the nominative (and so does \tsc{f3} on top of the accusative).\footnote{
 Note that it is crucial here to have a theory in which the features that form an accusative contain the features that form a nominative. If not, it would be a surprise that the nominative form is contained in the accusative form. The same holds for the accusative and dative.
 }
 
@@ -702,9 +697,9 @@ Accordingly, I give the lexical entry for the accusative marker \tit{-e:l} in \r
   {\draw (.east) node[right]{⇔ \tit{-e:l}}; }
 \end{forest}\label{ex:khanty-el-lexicon}
 
-So, \tit{luw-e:l} consists of two morphemes that both correspond to their own piece of syntactic structure: \tit{luw} and \tit{e:l}. But how do these two morphemes combine? This brings me to another detour into the Nanosyntactic theory, which is about spellout driven movement.
+So, \tit{luw-e:l} consists of two morphemes that both correspond to their own piece of syntactic structure: \tit{luw} and \tit{e:l}. But how do these two morphemes combine? This issue brings me to another detour into the Nanosyntactic theory, which is about spellout driven movement.
 
-Spellout in Nanosyntax only targets constituents. So, it is impossible to let \tsc{accP} spell out as \tit{e:l} while it contains \tsc{nom}P.\footnote{Notice that this would also have given the incorrect order of the morphemes: \tit{e:l-luw} instead of \tit{luw-e:l}.}
+As discussed in the previous section, spellout in Nanosyntax only targets constituents. That means that it is impossible to let \tsc{accP} spell out as \tit{e:l} while it contains \tsc{nom}P.\footnote{Notice that this also gives the incorrect order of the morphemes: \tit{e:l-luw} instead of \tit{luw-e:l}.}
 
 \ex. \begin{forest} boom
 [\ac{acc}P,name=accp, s sep=20mm,
@@ -732,13 +727,15 @@ label={below left:\tit{-e:l}}]{};
 
 The lexical entry in \ref{ex:khanty-el-lexicon} can only be a match for the syntactic structure if \tsc{nomP} moves away, leaving the \tsc{accP} containing \tsc{f2} behind. In other words, the complement of \tsc{f2} needs to be moved away.
 
-Exactly this movement is one of the two so-called `evacuation movements' that is part of the spellout procedure in Nanosyntax. As I illustrated in Section \ref{sec:syncretism}, lexical entries are matched using the Superset Principle and the Elsewhere Condition. However, if there is no match in the lexicon for a particular syntactic structure, two types of movement can take place, in a fixed order. The movement types change the syntactic structure in such a way that they generate new constituents that are possible matches for spellout.\footnote{
+Exactly this movement is one of the two so-called `evacuation movements' that is part of the spellout procedure in Nanosyntax. As I illustrated in Section \ref{sec:syncretism}, lexical entries are matched using the Superset Principle and the Elsewhere Condition. However, if there is no match in the lexicon for a particular syntactic structure, two types of movement can take place, in a fixed order.\footnote{
+The two movement types are Cinque's complement and spec to spec movement that we need anyway to get different surface orders in our syntax.
+}
+The movement types change the syntactic structure in such a way that they generate new constituents that are possible matches for spellout.\footnote{
 This type of movement is different from syntactic movement. It is driven by spellout, it does not have any interpretational effects, and it does not leave any traces. In Section XX I discuss `regular' syntactic movement in Nanosyntax.
 }
 For the discussion in this section, only the second type of movement is relevant: complement movement. In this type of movement, the complement or a particular feature moves to the specifier of that same particular feature.
-%add stuff about why cinque movements, about specifiers and what they are, see pavel's book
 
-This is exactly the type of movement I described necessary for the Khanty pronoun. The movement is displayed in \ref{ex:khanty-luw-el-movement}. The complement of \tsc{f2}, the \tsc{nom}P, the lower right circled portion in the structure, moves to the specifier of \tsc{acc}P. The strikethrough of the lower \tsc{nom}P indicates that the complement of \tsc{f}2 disappears.
+This is exactly the type of movement I described necessary for the Khanty pronoun. The movement is displayed in \ref{ex:khanty-luw-el-movement}. The complement of \tsc{f2}, the \tsc{nom}P, the lower right circled portion in the structure, moves to the specifier of \tsc{acc}P. In its landing position the internal structure of the \tsc{nom}P is no longer shown (taking away the necessity for the circle), and its phonological form is places under the triangle. The strikethrough of the lower \tsc{nom}P indicates that the complement of \tsc{f}2 disappears.
 
 \begin{forest} boom
 [\ac{acc}P
@@ -765,7 +762,7 @@ This is exactly the type of movement I described necessary for the Khanty pronou
 \end{forest}
 \label{ex:khanty-luw-el-movement}
 
-The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. Now the syntactic structre in \ref{ex:khanty-el-lexicon} matches the syntactic structure, and \tsc{acc}P is spelled out as \tit{e:l}.
+The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. The syntactic structure of the lexical entry in \ref{ex:khanty-el-lexicon} matches the syntactic structure, and \tsc{acc}P is spelled out as \tit{e:l}.
 
 \ex. \begin{forest} boom
 [\ac{acc}P
@@ -785,7 +782,7 @@ The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. Now the 
 \end{forest}
 \label{ex:khanty-luw-el-spellout}
 
-Just as the accusative, the dative also has its own realization. The lexical entry for \tit{-na} is given in \ref{ex:khanty-na-lexion}.
+Just as Khanty has a morpheme that shows up in the accusative, it also has a morpheme that shows up in the dative. This morpheme \tit{-na} combines with the phonological form for the accusative, which leads to the lexical entry given in \ref{ex:khanty-na-lexion}.
 
 \ex. \begin{forest} boom
   [\ac{dat}P
@@ -795,7 +792,7 @@ Just as the accusative, the dative also has its own realization. The lexical ent
 \end{forest}
 \label{ex:khanty-na-lexion}
 
-Again, because the spellout only targets constituents, it cannot be spelled out right after it has been merged, shown in \ref{ex:khanty-na-luw-el-spellout}.
+Again, because spellout only targets constituents, \tsc{f}3 cannot be spelled out right after it has been merged, as shown in \ref{ex:khanty-na-luw-el-spellout}.
 
 \ex.
 \begin{forest} boom
@@ -817,9 +814,9 @@ Again, because the spellout only targets constituents, it cannot be spelled out 
     ]
 ]
 \end{forest}
-\label{ex:khanty-luw-el-na-movement}
+\label{ex:khanty-luw-na-el-movement}
 
-so we are going to do the movement again
+The same movement has to take place, which is shown in \ref{ex:khanty-luw-el-na-movement}. The complement of \tsc{f3}, the \tsc{acc}P, the lower right circled portion in the structure, moves to the specifier of \tsc{dat}P. In its landing position the internal structure of the \tsc{acc}P is no longer shown (taking away the necessity for the circle), and its phonological form is places under the triangle. The strikethrough of the lower \tsc{acc}P indicates that the complement of \tsc{f}3 disappears.
 
 \ex.
 \begin{forest} boom
@@ -851,11 +848,9 @@ so we are going to do the movement again
 ]
 \draw[->,dashed] (src) to[out=south west,in=east] (tgt);
 \end{forest}
-\label{ex:khanty-luw-el-na-spellout}
+\label{ex:khanty-luw-el-na-movement}
 
-tada! it fits!
-
-Instead, the whole complement needs to be moved out of the \tsc{dat}P. Now the lexical entry can be inserted.
+The result of the movement is given in \ref{ex:khanty-luw-el-na-spellout}. The syntactic structure of the lexical entry in \ref{ex:khanty-na-lexicon} matches the syntactic structure, and \tsc{dat}P is spelled out as \tit{na}.
 
 \ex.
 \begin{forest} boom
@@ -881,7 +876,7 @@ Instead, the whole complement needs to be moved out of the \tsc{dat}P. Now the l
 \end{forest}
 \label{ex:khanty-luw-el-na-spellout}
 
-
+To summarize, xxxx
 
 
 
@@ -890,9 +885,6 @@ Instead, the whole complement needs to be moved out of the \tsc{dat}P. Now the l
 Start with the observation in terms of the case scale: \ac{nom} < \ac{acc} < \ac{dat}
 
 In this section I show how case competition in headless relatives can be derived from the case decomposition in Table \ref{tbl:case-decomposed}. I repeat the summary of the data pattern in Gothic in Table \ref{tbl:summary-gothic-deriving}.
-
-
-
 
 
 \begin{table}[ht]
@@ -925,7 +917,8 @@ In this section I show how case competition in headless relatives can be derived
     \label{tbl:summary-gothic-deriving}
 \end{table}
 
-%make the cells in the table different shades of grey, depending on case competition that's going on.
+So, dark gray is dative against accusative, and dative always wins. Dative actually contains accusative.
+
 %let this correspond to the cells below?
 
 \ex.
@@ -950,6 +943,7 @@ In this section I show how case competition in headless relatives can be derived
   ]
 \end{forest}
 
+Light gray is dative against nominative, and dative always wins. Dative actually contains nominative.
 
 \ex.
 \begin{forest} boom
@@ -973,7 +967,7 @@ In this section I show how case competition in headless relatives can be derived
   ]
 \end{forest}
 
-
+Colorless is accusative against nominative, and accusative always wins. Accusative actually contains nominative.
 
 \ex.
 \begin{forest} boom
@@ -996,8 +990,7 @@ In this section I show how case competition in headless relatives can be derived
 \end{forest}
 
 
-
-so one can delete the other
+What seems to happen is that the bigger one, that one that contains the other wins. It has the strength to delete the other. Here there is dative against accusative.
 
 \begin{table}[H]
   \center
@@ -1044,6 +1037,8 @@ so one can delete the other
   \end{tabular}
 \end{table}
 
+This is dative against nominative.
+
 \begin{table}[H]
   \center
 	\caption {\ac{dat}P deletes \ac{nom}P}
@@ -1085,6 +1080,8 @@ so one can delete the other
       \end{forest} \\
   \end{tabular}
 \end{table}
+
+And this is accusative against nominative.
 
 \begin{table}[H]
   \center
@@ -1129,4 +1126,4 @@ so one can delete the other
 
 \section{Summary}
 
-Case can be decomposed as cumulatively. Then in a nanosyntax fashion: each feature is a syntactic head. This can derive syncretism facts and formal containment fact. Also: case scale in headless relatives: a case more to the right on the scale contains the case more to the left on the scale, and it can be licensed in that way. The question: is it deleted or was it there never to begin with will be addressed later.
+Case can be decomposed cumulatively. Then in a nanosyntax fashion: each feature is a syntactic head. This can derive syncretism facts and formal containment fact. Also: case scale in headless relatives: a case more to the right on the scale contains the case more to the left on the scale, and it can be licensed in that way. The question: is it deleted or was it there never to begin with will be addressed later.
