--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -463,16 +463,6 @@
 }
 
 
-@incollection{caha2020a,
-  title={Nanosyntax: some key features},
-  author={Caha, Pavel},
-  year={2020},
-  booktitle={The Cambridge handbook of Distributed Morphology},
-  adress={Cambridge},
-  editor={Artemis Alexiadou, Ruth Kramer, Alec Marantz, Isabel-Oltra Massuet},
-  publisher={Cambridge University Press}
-}
-
 @book{cinqueforthcoming,
   address = {Cambridge},
   title = {The Syntax of Relative Clauses: A Unified Double-headed Analysis},
@@ -500,11 +490,12 @@
   address={Berlin}
 }
 
-@article{johnson2000,
-  title={Few dogs eat Whiskas or cats Alpo},
-  author={Johnson, Kyle},
-  journal={UMOP},
-  volume={23},
-  pages={59--82},
-  year={2000}
+@incollection{caha2020,
+  title={Nanosyntax: some key features},
+  author={Caha, Pavel},
+  year={2020},
+  booktitle = {The Cambridge handbook of Distributed Morphology},
+  editor = {Alexiadou, Artemis and Kramer, Ruth and Marantz, Alec and Massuet, Isabel-Oltra},
+  publisher = {Cambridge University Press},
+  address={Cambridge}
 }
